testsuite/bsc.typechecker/kind/TypeAliasResGivenNonNumIsNum.bs
package TypeAliasResGivenNonNumIsNum () where

type (Foo :: *) = 12

